ci: updated pr created workflow

--- a/.github/workflows/pr-created.yml
+++ b/.github/workflows/pr-created.yml
@@ -16,14 +16,16 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       environments: ${{ steps.define-envs.outputs.environments }}
-      base-name: ${{ steps.define-envs.outputs.base-name }}
+      release-tag: ${{ steps.define-envs.outputs.release-tag }}
+      is-release: ${{ steps.define-envs.outputs.is-release }}
 
     steps:
       - name: Define envs information
         id: define-envs
         run: |
+            echo is-release=${{ startsWith(github.head_ref, 'release/') && 'true' || '' }} >> $GITHUB_OUTPUT
             echo environments='${{ startsWith(github.head_ref, 'release/') && vars.RELEASE_ENVIRONMENTS || vars.DEV_ENVIRONMENTS }}' >> $GITHUB_OUTPUT
-            echo base-name=${{ startsWith(github.head_ref, 'release/') && 'last-release' || 'main' }} >> $GITHUB_OUTPUT
+            echo release-tag=${{ startsWith(github.head_ref, 'release/') && 'last-release' || 'main' }} >> $GITHUB_OUTPUT
 
   lint-and-run-tests:
     needs: [ prepare ]
@@ -36,6 +38,19 @@ jobs:
           ref: ${{ github.head_ref }}
           fetch-depth: 0
 
+      - name: Verify if last release tag exists, and define nx command to use
+        id: nx
+        run: |
+          if [ $(git tag -l ${{ needs.prepare.outputs.release-tag }}) ] || [[ 'main' == '${{ needs.prepare.outputs.release-tag }}' ]]; then
+           echo "Last release tag exists, will process with affected applications"
+           echo exec-cmd="nx affected --base=${{ needs.prepare.outputs.release-tag }}" >> $GITHUB_OUTPUT
+           echo show-apps="npx nx show projects --json --type app --affected --base ${{ needs.prepare.outputs.release-tag }}" >> $GITHUB_OUTPUT
+          else
+           echo "No last release tag exists, all apps will be deployed"
+           echo exec-cmd="nx run-many" >> $GITHUB_OUTPUT
+           echo show-apps="npx nx show projects --json --type app" >> $GITHUB_OUTPUT
+          fi
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -45,20 +60,20 @@ jobs:
         run: yarn install
 
       - name: Run lint
-        run: npx nx affected:lint --base="${{ needs.prepare.outputs.base-name }}"
+        run: ${{ steps.nx.outputs.exec-cmd }} -t lint
 
       - name: Pull postgres image, before running tests
         run: docker pull postgres:15.4-alpine
 
       - name: Verify changed apps and libraries are buildable
-        run: npx nx affected:build --base="${{ needs.prepare.outputs.base-name }}"
+        run: ${{ steps.nx.outputs.exec-cmd }} -t build
 
       - name: Tests coverage
-        run: npx nx affected:test --base="${{ needs.prepare.outputs.base-name }}" --codeCoverage
+        run: ${{ steps.nx.outputs.exec-cmd }} -t test --codeCoverage
 
       - name: Get affected projects
         id: get-affected-projects
-        run: echo affected-projects=$(npx nx show projects --json --affected --type app --with-target build --base ${{ needs.prepare.outputs.base-name }}) >> $GITHUB_OUTPUT
+        run: echo affected-projects=$(${{ steps.nx.outputs.show-apps }} --with-target build) >> $GITHUB_OUTPUT
 
   init-state-app:
     needs: [ lint-and-run-tests, prepare ]
@@ -76,6 +91,7 @@ jobs:
     secrets: inherit
 
   init-state-ci:
+    if: ${{ !needs.prepare.outputs.is-release }}
     needs: [lint-and-run-tests, init-state-app]
     strategy:
       matrix:
@@ -105,6 +121,7 @@ jobs:
 
   plan-ci:
     needs: [lint-and-run-tests, init-state-ci]
+    if: ${{ !needs.prepare.outputs.is-release }}
     strategy:
       matrix:
         environment: ["deployment"]
