--- a/.github/workflows/pr-created.yml
+++ b/.github/workflows/pr-created.yml
@@ -47,7 +47,7 @@ jobs:
            echo show-apps="npx nx show projects --json --type app --affected --base ${{ needs.prepare.outputs.release-tag }}" >> $GITHUB_OUTPUT
           else
            echo "No last release tag exists, all apps will be deployed"
-           echo exec-cmd="nx run-many" >> $GITHUB_OUTPUT
+           echo exec-cmd="npx nx run-many" >> $GITHUB_OUTPUT
            echo show-apps="npx nx show projects --json --type app" >> $GITHUB_OUTPUT
           fi
 
