--- a/.github/workflows/pr-created.yml
+++ b/.github/workflows/pr-created.yml
@@ -43,7 +43,7 @@ jobs:
         run: |
           if [ $(git tag -l ${{ needs.prepare.outputs.release-tag }}) ] || [[ 'main' == '${{ needs.prepare.outputs.release-tag }}' ]]; then
            echo "Last release tag exists, will process with affected applications"
-           echo exec-cmd="nx affected --base=${{ needs.prepare.outputs.release-tag }}" >> $GITHUB_OUTPUT
+           echo exec-cmd="npx nx affected --base=${{ needs.prepare.outputs.release-tag }}" >> $GITHUB_OUTPUT
            echo show-apps="npx nx show projects --json --type app --affected --base ${{ needs.prepare.outputs.release-tag }}" >> $GITHUB_OUTPUT
           else
            echo "No last release tag exists, all apps will be deployed"
