--- a/.github/workflows/pr-created.yml
+++ b/.github/workflows/pr-created.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
             echo is-release=${{ startsWith(github.head_ref, 'release/') && 'true' || '' }} >> $GITHUB_OUTPUT
             echo environments='${{ startsWith(github.head_ref, 'release/') && vars.RELEASE_ENVIRONMENTS || vars.DEV_ENVIRONMENTS }}' >> $GITHUB_OUTPUT
-            echo release-tag=${{ startsWith(github.head_ref, 'release/') && 'last-release' || 'main' }} >> $GITHUB_OUTPUT
+            echo release-tag=${{ startsWith(github.head_ref, 'release/') && 'last-release' || 'origin/main' }} >> $GITHUB_OUTPUT
 
   lint-and-run-tests:
     needs: [ prepare ]
