--- a/.github/workflows/build-and-deploy-apps.yml
+++ b/.github/workflows/build-and-deploy-apps.yml
@@ -13,7 +13,7 @@ on:
     inputs:
       environment:
         required: true
-        type: string
+        type: choice
         options:
           - dev
           - stage
