--- a/.github/workflows/mark-last-release.yml
+++ b/.github/workflows/mark-last-release.yml
@@ -10,6 +10,10 @@ on:
     types:
       - closed
 
+concurrency:
+  group: mark-release
+  cancel-in-progress: false
+
 jobs:
   mark-release:
     if: ${{ startsWith(github.head_ref, 'release/') }} && github.event.pull_request.merged == true
