--- a/apps/platform/src/app/assets/.env-local.yaml
+++ b/apps/platform/src/app/assets/.env-local.yaml
@@ -1,5 +1,11 @@
+logs:
+  colorize: true
+
 i18:
   paths:
     - i18n/
     - ../../../node_modules/@softkit/validation/i18n/
     - ../../../node_modules/@softkit/exceptions/i18n/
+
+app:
+  port: 3000
