--- a/apps/platform/src/app/assets/.env.yaml
+++ b/apps/platform/src/app/assets/.env.yaml
@@ -30,8 +30,8 @@ swagger:
   description: 'It has a common api for tenants and auth. By default designed as a multi-tenant, but you can have only one tenant and manage it like this, in case if in future you would like to expand.'
   version: 1.0.0
   contactName: ${CONTACT_NAME:-}
-  contactEmail: ${CONTACT_EMAIL:-}
-  contactUrl: ${CONTACT_URL:-}
+  contactEmail: ${CONTACT_EMAIL:-example@example.com}
+  contactUrl: ${CONTACT_URL:-https://example.com}
   servers:
     - { url: 'http://localhost:9999', description: 'local server' }
 
