ci: updated some dependencies and information for the default postgres db

--- a/apps/platform/src/app/assets/.env.yaml
+++ b/apps/platform/src/app/assets/.env.yaml
@@ -1,5 +1,6 @@
 logs:
   colorize: false
+  prettyPrint: false
 
 saml:
   issuer: sk-boilerplate
@@ -55,4 +56,4 @@ db:
   dropSchema: false
   keepConnectionAlive: true
   logging: ${DB_LOGGING:-false}
-  ssl: false
+  ssl: ${SSL_ENABLED:-false}
