ci: added ssl reject unauthorized

--- a/apps/platform/src/app/assets/.env.yaml
+++ b/apps/platform/src/app/assets/.env.yaml
@@ -57,3 +57,6 @@ db:
   keepConnectionAlive: true
   logging: ${DB_LOGGING:-false}
   ssl: ${SSL_ENABLED:-false}
+  extra:
+    ssl:
+      rejectUnauthorized: ${DB_EXTRA_SSL_REJECT_UNAUTHORIZED:-false}
