--- a/apps/platform/src/app/assets/.env.yaml
+++ b/apps/platform/src/app/assets/.env.yaml
@@ -26,7 +26,7 @@ health:
 
 swagger:
   title: 'Platform Application is responsible for the common things, like user, tenants, auth, management.'
-  swaggerPath: "/${app.prefix}/swagger"
+  swaggerPath: "/swagger"
   enabled: true
   description: 'It has a common api for tenants and auth. By default designed as a multi-tenant, but you can have only one tenant and manage it like this, in case if in future you would like to expand.'
   version: 1.0.0
